Some Yue Stuff & Capitalising XNU

--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -34,16 +34,16 @@
  xiongnu_missions_2_task_9: "Doom Donghu"
  xiongnu_missions_2_task_9_DESC: "The Donghu have long been our greatest eastern threat - a rival horselord confederation dominated by Mongolic peoples. We must shatter their leadership and integrate the capable warriors of the Hu into our growing steppe empire."
 
- xiongnu_missions_2_task_10: "War on China"
+ xiongnu_missions_2_task_10: "War On China"
  xiongnu_missions_2_task_10_DESC: "Our steppe rivals have been pacified, our resources are overflowing from conquest, and horses have been bred for war. We are finally in a position to show the Middle Kingdom what true terror is."
 
- xiongnu_missions_2_task_11: "Gold Crown for a Chanyu"
+ xiongnu_missions_2_task_11: "Gold Crown For A Chanyu"
  xiongnu_missions_2_task_11_DESC: "Our conquests and contact with the Chinese have led to appreciation for finer prestige items at the court of the Chanyu. Let us hire foreign artisans to craft a golden crown to inspire awe and majesty for the numerous subjects of the Chanyu."
 
  xiongnu_missions_2_task_12: "Central Sanctuary"
  xiongnu_missions_2_task_12_DESC: "Longcheng has always been the spiritual heart of the Xiongnu people since before our great conquests. The capital and holiest city of the empire should be venerated as such with sacred dedications and rituals befitting our new-found wealth."
 
- xiongnu_missions_2_task_13: "Enter the Desert"
+ xiongnu_missions_2_task_13: "Enter The Desert"
  xiongnu_missions_2_task_13_DESC: "It is not enough to control the Hexi corridor trade, as the statelets and tribesmen around the Taklamakan continue to realize profits that could be ours. Let us gallop into the first of the areas of the desert oases to exact our tribute."
 
  xiongnu_missions_2_task_14: "Yeet Yan"
@@ -55,7 +55,7 @@
  xiongnu_missions_2_task_16: "Chinese Concubine"
  xiongnu_missions_2_task_16_DESC: "One price exacted on the Chinese city-builders is the forced marriage of Chinese princesses to the court of the Xiongnu - with the most beautiful serving as concubines of the Chanyu, and the rest being given to nobles across the vast, multi-ethnic tribal confederation. Let us take a beautiful princess from one of our Chinese vassals to serve in the royal palace. "
 
- xiongnu_missions_2_task_17: "City of the Chanyu"
+ xiongnu_missions_2_task_17: "City Of The Chanyu"
  xiongnu_missions_2_task_17_DESC: "It is time to make Longcheng into a proper city - no longer just a place for tents and pastures, but a metropolis built in the heart of the steppe, blending nomadic themes with Chinese architectural brilliance. The Chanyu shall rule from a seat of radiant glory over our vast lands."
 
  xiongnu_missions_2_task_18: "March Further West"
@@ -64,13 +64,13 @@
  xiongnu_missions_2_task_19: "Western Taklamakan"
  xiongnu_missions_2_task_19_DESC: "The vast riches of Tarim Basin oasis cities are now within our grasp - their desert fortresses will not be able to hold out forever against the might of the Chanyu's hordes of Asia. The plunder of the great cities of the Silk Road will fill the wallets of our tribesmen, and that of the Chanyu."
 
- xiongnu_missions_2_task_20: "Thrust into Jin"
+ xiongnu_missions_2_task_20: "Thrust Into Jin"
  xiongnu_missions_2_task_20_DESC: "Peoples with strange bronze knives and speaking unheard languages lay in a hilly peninsula to the south of our eastern-most holdings. It is time for the Chanyu to bring these odd peoples to their knees, exacting tribute and subjugation on the inhabitants of this peninsula and acquiring their bronze treasures."
 
- xiongnu_missions_2_task_21: "From West to East"
+ xiongnu_missions_2_task_21: "From West To East"
  xiongnu_missions_2_task_21_DESC: "The greatness of our empire stretches so far from west to east that we can hardly even conceive its borders. We must maintain control over every corner of our empire by ensuring the loyalty of the various governors of the foreign districts."
  
- xiongnu_missions_2_task_22: "The Peninsula of Jin"
+ xiongnu_missions_2_task_22: "The Peninsula Of Jin"
  xiongnu_missions_2_task_22_DESC: "There shall be no more indepedent Korea - we must finish the job and conquer the remaining independent states in the region, securing our entire eastern land border against the great ocean."
 
 
