--- a/localization/english/missions/xiongnu_missions_3_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_3_l_english.yml
@@ -7,7 +7,7 @@
 
  #Missions
 
- xiongnu_missions_3_task_1:0 "Zhaoan Subjects"
+ xiongnu_missions_3_task_1:0 "Zhao Subjects"
  xiongnu_missions_3_task_1_DESC:0 "The Zhao have long had a policy of mimicking our fighting and clothing style in an attempt to fend off our aggression, in a similar manner to the former Yan state. We must begin our invasion here, against one of our most capable foes, to neuter any chance at our tactical advantages in cavalry being negated by Chinese strategists."
 
  xiongnu_missions_3_task_2:0 "Destroy Zhao"
@@ -58,16 +58,16 @@
  xiongnu_missions_3_task_17:0 "The Heaven's Horses"
  xiongnu_missions_3_task_17_DESC:0 "The Heavenly Horses of the Ferghana Basin have been a primary target of our western campaigns, as maintaining the best quality horses is of the utmost strategic value for the Empire. Let us expand the breeding and export of these animals for the sake of the Great Chanyu."
 
- xiongnu_missions_3_task_18:0 "Bonfire of Zhou"
+ xiongnu_missions_3_task_18:0 "Bonfire Of Zhou"
  xiongnu_missions_3_task_18_DESC:0 "The ancient seat of the Middle Kingdom at Chengzhou will be the greatest prize of the Xiongnu. For centuries the legitimacy of the Zhou kings lay at the palace of this fabled city, accumulating wealth beyond measure and housing the holy objects of their people. By conquering and sacking this city, our Great Chanyu will eliminate the political system of the Chinese, demoralize the remaining Warring States, claim the vast treaures of the Zhou for our tribesmen and demonstrate our dominance over all of China."
 
  xiongnu_missions_3_task_19:0 "Enslave Chinese"
  xiongnu_missions_3_task_19_DESC:0 "The newly conquered Chinese population must be put in their place. The days of their cultural and political dominance are now over, and their peoples will now serve as nothing man than slaves to the Great Chanyu. Let us enshrine their 'rights' in our laws, and create a permanent slave class out of the once mighty Middle Kingdom."
 
- xiongnu_missions_3_task_20:0 "Looking for Freedom"
+ xiongnu_missions_3_task_20:0 "Looking For Freedom"
  xiongnu_missions_3_task_20_DESC:0 "We shall continue the path forged by our forefathers like Touman and Modun - we shun the trappings of settled civilization and make our living subjugating and pillaging the city-dwellers of the world. We will forever seek glory on the back of our horse and not fall prey to the complacency of settled life like our Huaxia slaves."
 
- xiongnu_missions_3_task_21:0 "The Great City of Ji"
+ xiongnu_missions_3_task_21:0 "The Great City Of Ji"
  xiongnu_missions_3_task_21_DESC:0 "The city of Ji lay in the perfect position between our homelands in the vast steppe north of the Gobi, and the great Chinese civilization now mostly controlled by our empire. We shall consecrate a southern capital at this great city to unite steppe civilization with Chinese urbanism."
 
  xiongnu_missions_3_task_22:0 "Sinicization"
@@ -82,13 +82,13 @@
  xiongnu_missions_3_task_25:0 "Wei's Demise"
  xiongnu_missions_3_task_25_DESC:0 "The final of the three Jins, Wei, sits at the heart of the Yellow River. We must strike forth to attain the great plunder of Daliang and rip the heart out of the Middle Kingdom."
 
- xiongnu_missions_3_task_26:0 "Mouths of Great Rivers"
+ xiongnu_missions_3_task_26:0 "Mouths Of Great Rivers"
  xiongnu_missions_3_task_26_DESC:0 "The mouths of the other two great rivers of China - the Huai and Yangtze - must be put under the sword if we ever hope to stop the flow of the aid coming to Chinese rebels from this coastline and up the rivers."
 
- xiongnu_missions_3_task_27:0 "Work the Silk Farms"
+ xiongnu_missions_3_task_27:0 "Work The Silk Farms"
  xiongnu_missions_3_task_27_DESC:0 "The secret of silk manufacture is now in our hands as the masters of all China. Let us exploit this knowledge and ramp up production of silk to enrich the imperial coffers."
 
- xiongnu_missions_3_task_28:0 "Control the Silk Road"
+ xiongnu_missions_3_task_28:0 "Control The Silk Road"
  xiongnu_missions_3_task_28_DESC:0 "Control over China and the Silk Road will lead to one thousand years of prosperity for our nation. Merchants from across the world will seek our metropoli for the never-ending wealth that our country generates, for the hope of bringing just a piece back to their home."
 
 
