--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -7,10 +7,10 @@
 
 #Missions
 
- xiongnu_missions_01_task_1: "Consolidate our Clans"
+ xiongnu_missions_01_task_1: "Consolidate Our Clans"
  xiongnu_missions_01_task_1_DESC: "The leadership of the [ROOT.GetCountry.GetName] tribes is fractured and disorganized. If we over hope to compete with our neighbors we must consolidate the political leadership of the disparate [ROOT.GetCountry.GetName] tribes under the banner of one powerful dynasty."
 
- xiongnu_missions_01_task_2: "Loyalty to Luandi"
+ xiongnu_missions_01_task_2: "Loyalty To Luandi"
  xiongnu_missions_01_task_2_DESC: "The blood of the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] family has been chosen to lead our tribal confederation to glory over our neighbors, with the promise of the spoils of war. Long live the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] line!"
 
  xiongnu_missions_01_task_3: "Touman's Tribe"
@@ -31,7 +31,7 @@
  xiongnu_missions_01_task_8: "Early Steppe Stirrups"
  xiongnu_missions_01_task_8_DESC: "While the origin of proto-stirrups have long been debated, it is without a doubt that [ROOT.GetCountry.GetName] hard-wood saddles contributed to the development and proliferation of technological advancements that led to the stirrup we know today. Let us invest in the this equestrine technology, and all will fear the sound of our hooves."
 
- xiongnu_missions_01_task_9: "Prairies and Pastures"
+ xiongnu_missions_01_task_9: "Prairies And Pastures"
  xiongnu_missions_01_task_9_DESC: "Raising livestock in the grasslands and pastures of the steppe is the backbone of our political and economic system. This cannot be ignored by the [ROOT.GetCountry.GetName] political leadership."
 
  xiongnu_missions_01_task_10: "Foreign Tribute"
@@ -65,7 +65,7 @@
  xiongnu_missions_01_task_19_DESC: "The piddling [GetCountry('WUS').GetName] tribe, a lesser cousin of our [GetCountry('YEZ').GetName] rivals, cannot be allowed to interfere in our relations with the other steppe tribes. Let us ensure they won't, through 'diplomatic' means."
  xiongnu_missions_01_task_19_tt:0 "Challenge [GetCountry('WUS').GetRuler.GetName] to a duel with the character interaction."
 
- xiongnu_missions_01_task_20: "Rise of the New Chanyu"
+ xiongnu_missions_01_task_20: "Rise Of The New Chanyu"
  xiongnu_missions_01_task_20_DESC: "A new #T Chanyu#! will rise to create a legacy of conquest and terror that will echo through the millenia..."
 
 
