--- a/localization/english/missions/yue_state_missions_l_english.yml
+++ b/localization/english/missions/yue_state_missions_l_english.yml
@@ -80,8 +80,8 @@
  me_yue_state_1.a: ""
 
  me_yue_state_2_title: "$missions_yue_state_task_2$"
- me_yue_state_2_desc: ""
- me_yue_state_2.a: ""
+ me_yue_state_2_desc: "The debris of past sorrows has been cleared, and new settlers have been enticed by the promise of prosperity and security behind our walls.\n\nThe city of [GetProvince('(int32)9089').GetName] shines brightly once more and will again be a city to compete with the likes of [GetProvince('(int32)8504').GetName] and [GetProvince('(int32)8379').GetName]!"
+ me_yue_state_2.a: "The greatest Yue city, and the most beautiful of them all..."
 
  me_yue_state_3_title: "$missions_yue_state_task_3$"
  me_yue_state_3_desc: ""
@@ -100,8 +100,8 @@
  me_yue_state_500.a: ""
 
  me_yue_state_6_title: "$missions_yue_state_task_6$"
- me_yue_state_6_desc: ""
- me_yue_state_6.a: ""
+ me_yue_state_6_desc: "Our prudent agricultural efforts have ensured the production of our high quality rice is maintained and increased.\n\nWe need not worry about a lack of rice in [ROOT.GetCountry.GetName], and foreign traders will flock to secure access to our goods."
+ me_yue_state_6.a: "Praise the heavens."
 
  me_yue_state_7_title: "$missions_yue_state_task_7$"
  me_yue_state_7_desc: ""
@@ -124,8 +124,8 @@
  me_yue_state_11.a: ""
 
  me_yue_state_12_title: "$missions_yue_state_task_12$"
- me_yue_state_12_desc: ""
- me_yue_state_12.a: ""
+ me_yue_state_12_desc: "$me_chinese_empire_24_desc$"
+ me_yue_state_12.a: "The credit must be given to the hardworking people"
 
  me_yue_state_13_title: "$missions_yue_state_task_13$"
  me_yue_state_13_desc: ""
@@ -161,8 +161,8 @@
  me_yue_state_20.a: ""
 
  me_yue_state_21_title: "$missions_yue_state_task_21$"
- me_yue_state_21_desc: ""
- me_yue_state_21.a: ""
+ me_yue_state_21_desc: "The light of [GetCharacter('(int32)590').GetName]'s sword was extinguished after he passed away. The old victories did not last, and the shadow returned; we have need of light once more. A new blade must be forged, so it was decreed by [ROOT.GetCountry.GetRuler.GetName].\n\nThe whole court has been anxiously waiting for several days, when finally the the royal smiths return with a new royal bronze sword. Immediately our [ROOT.GetCountry.GetRulerTitle] is coming forward and drawing [ROOT.GetCountry.GetRuler.GetHerHis] new weapon at once. \n\n'It takes more than a sword, even a sword as well-crafted as this one, to fight the will of the enemy. But I know this as well: we will do what we must, no matter the cost! We will stand opposed to all who threaten the safety of our people and will not rest until the enemy is laid low', said our wise ruler."
+ me_yue_state_21.a: "This day will be remembered as the restoration of our state!"
  
  me_yue_state_22_title: "$missions_yue_state_task_22$"
  me_yue_state_22_desc: ""
@@ -302,8 +302,8 @@
  me_yue_langyayue_1.a: ""
 
  me_yue_langyayue_2_title: "$missions_yue_state_task_2$"
- me_yue_langyayue_2_desc: ""
- me_yue_langyayue_2.a: ""
+ me_yue_langyayue_2_desc: "The debris of past sorrows has been cleared, and new settlers have been enticed by the promise of prosperity and security behind our walls.\n\nThe city of [GetProvince('(int32)8527').GetName] shines brightly once more and will again be a city to compete with the likes of [GetProvince('(int32)8504').GetName] and [GetProvince('(int32)8379').GetName]!"
+ me_yue_langyayue_2.a: "$me_yue_state_2.a$"
 
  me_yue_langyayue_5_title: "$missions_yue_state_task_5$"
  me_yue_langyayue_5_desc: ""
