Nearly all of Zhongshan complete in the zorgo way

--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -80,7 +80,7 @@
  me_xiongnu_2_1.a: "Our greatest rivals are destroyed!"
 
  me_xiongnu_2_2_title: "$xiongnu_missions_2_task_2$"
- me_xiongnu_2_2_desc: "Even 500 generations from now, tribesmen will harken back to this time, to this great Chanyu. They will claim their legitmacy to rule the steppe based on what Chanyu Modun has done in his life, and claim to be a descendant of this first God of the Steppe. Let the blood of Luandi haunt and terrorize enemies of our descendants throughout the millenia."
+ me_xiongnu_2_2_desc: "Even 500 generations from now, tribesmen will harken back to this time, to the #E Great Chanyu Modun#!. They will claim their legitmacy to rule the steppe based on what Chanyu Modun has done in his life, and claim to be a descendant of this first God of the Steppe. Let the blood of Luandi haunt and terrorize enemies of our descendants throughout the millenia."
  me_xiongnu_2_2.a: "The right to rule is in our blood."
 
  me_xiongnu_2_3_title: "$xiongnu_missions_2_task_3$"
@@ -122,7 +122,7 @@
  me_xiongnu_2_11.a: "Awe at the majesty of our Great Chanyu!"
 
  me_xiongnu_2_12_title: "$xiongnu_missions_2_task_12$"
- me_xiongnu_2_12_desc: "The ritual embellishment of the heart and soul of the empire - Longcheng - has led to a new religious fervor overtaking residents of the capital. The tribesmen and craftsmen awe at the contruction of temples, watch daily rites performed with a mystical air about them, and believe they are part of something greater than themselves. The shaman class, meanwhile, could not be happier with their new accomadations and status, entrenching their loyalty to the state. All goes according to plan..."
+ me_xiongnu_2_12_desc: "The ritual embellishment of the heart and soul of the empire - #E Longcheng#! - has led to a new religious fervor overtaking residents of the capital. The tribesmen and craftsmen awe at the construction of temples, watch daily rites performed with a mystical air about them, and believe they are part of something greater than themselves. The shaman class, meanwhile, could not be happier with their new accomadations and status, entrenching their loyalty to the state. All goes according to plan..."
  me_xiongnu_2_12.a: "Longcheng will forever be our spiritual home."
 
  me_xiongnu_2_13_title: "$xiongnu_missions_2_task_13$"
@@ -203,13 +203,13 @@
  #Modifiers
  xiongnu_desert_mod: "Surviving the Desert"
  xiongnu_speed_run: "Like the Wind"
- xiongnu_speed_run_reward: "$xiongnu_speed_run_reward$"
+ xiongnu_speed_run_reward: "Steppe Riding"
  xiongnu_02_final_mod: "Steppe Dominance"
  xiongnu_sanctuary_mod: "Central Sanctuary"
  city_of_chanyu: "City of the Chanyu"
  desc_xiongnu_desert_mod: "Our horses and men have learned the ways of the desert."
  desc_xiongnu_speed_run: "Our governors remain loyal through the political aptitude of the Chanyu..."
- desc_xiongnu_speed_run_reward: "$desc_xiongnu_speed_run$"
+ desc_xiongnu_speed_run_reward: "Our riding skills in the open steppe are second to none."
  desc_xiongnu_02_final_mod: "We can rely on the loyalty of the various nobles in our confederation."
  desc_xiongnu_sanctuary_mod: "The holy sanctuaries of Longcheng compel men to adopt our ways."
  desc_city_of_chanyu: "This city enjoys the splendor brought to it by the Great Chanyu of the Xiongnu."
