--- a/localization/english/missions/zhongshan_missions_l_english.yml
+++ b/localization/english/missions/zhongshan_missions_l_english.yml
@@ -94,11 +94,11 @@
  me_zhongshan_6.a: "Our marriage-alliance is secure!"
  
  me_zhongshan_600_title: "A Zhongshan Bride"
- me_zhongshan_600_desc: "Our nascent friendship and patronage of the Kingdom of [GetCountry('ZHS').GetName)] has proven useful in curtailing the ambitions of our enemies to the west and north, [GetCountry('ZHA').GetName)] and [GetCountry('YAN').GetName)]. With the ever-changing nature of alliances in the #E Middle Kingdom#!, we should exchange princesses with their royal house, and bring a new #E Zhongshan#! bride to court in [GetProvince('(int32)8504').GetName]."
+ me_zhongshan_600_desc: "Our nascent friendship and patronage of the Kingdom of [GetCountry('ZHS').GetName)] has proven useful in curtailing the ambitions of our enemies to the west and north, [GetCountry('ZHA').GetName)] and [GetCountry('YAN').GetName)]. With the ever-changing nature of alliances in the #E Middle Kingdom#!, we should exchange princesses with their royal house, and bring a new #E Zhongshan#! bride to court in [GetProvince('(int32)8504').GetName] to secure their loyalties."
  me_zhongshan_600.a: "Let us celebrate this consecration!"
 
  me_zhongshan_7_title: "$zhongshan_missions_task_7$"
- me_zhongshan_7_desc: "As the new great holy site in our capital of [GetProvince('(int32)8686').GetName] was ceremonious unveiled, King [ROOT.GetCountry.GetRuler.GetName] stood upon the entryway waving to the crowds. The people cheered and began to sing songs in honor of their ancestors, and hailing the king and his great architects. At that moment, the king had commemorative funerary decorations made of bronze brought forth to show off to the masses. This caused a sensation, and a holiday with feasts was subsequently declared for three days in honor of all of the spirits of the ancestors of [GetCountry('ZHS').GetName)]."
+ me_zhongshan_7_desc: "As the new great holy site in our capital of [GetProvince('(int32)8686').GetName] was ceremoniously unveiled, King [ROOT.GetCountry.GetRuler.GetName] stood upon the entryway waving to the crowds. The people cheered and began to sing songs in honor of their ancestors, and hailing the king and his great architects. At that moment, the king had commemorative funerary decorations made of bronze brought forth to show off to the masses. This caused a sensation, and a holiday with feasts was subsequently declared for three days in honor of all of the spirits of the ancestors of [GetCountry('ZHS').GetName)]."
  me_zhongshan_7.a: "The holy objects will be venerated for time immemorial."
 
  me_zhongshan_8_title: "$zhongshan_missions_task_8$"
