duuchuu religoin, names, gender stuff, etc

--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -1455,3 +1455,49 @@ Umkhun: "Umkhun"
 Velk: "Velk"
 Yurik: "Yurik"
 Zuyuk: "Zuyuk"
+
+Yuuna: "Yuuna"
+Saya: "Saya"
+Eiko: "Eiko"
+Kame: "Kame"
+Kana: "Kana"
+Seiko: "Seiko"
+Ayai: "Ayai"
+Kenwa: "Kenwa"
+Eishin: "Eishin"
+Eikichi: "Eikichi"
+Kama: "Kama"
+Kamado: "Kamado"
+Kamasuke: "Kamasuke"
+Koei: "Koei"
+Kosuke: "Kosuke"
+Matsusuke: "Matsusuke"
+Duusei: "Duusei"
+Seiei: "Seiei"
+Seikichi: "Seikichi"
+Seitoku: "Seitoku"
+Seiyu: "Seiyu"
+Taru: "Taru"
+Seizen: "Seizen"
+Ushi: "Ushi"
+Zentaro: "Zentaro"
+
+Fiija: "Fiija"
+Kanagusuku: "Kanagusuku"
+Ufugusuku: "Ufugusuku"
+Naagusuku: "Naagusuku"
+Arakachi: "Arakachi"
+Tamagusuku: "Tamagusuku"
+Wiibaru: "Wiibaru"
+Shimabuku: "Shimabuku"
+Teera: "Teera"
+Yamagusuku: "Yamagusuku"
+Ahagon: "Ahagon"
+Aragusuku: "Aragusuku"
+Chatan: "Chatan"
+Chinen: "Chinen"
+Jahana: "Jahana"
+Naagusuku: "Naagusuku"
+Onaga: "Onaga"
+Dakujaku: "Dakujaku"
+Yara: "Yara"
