--- a/localization/english/ti_religions_l_english.yml
+++ b/localization/english/ti_religions_l_english.yml
@@ -15,6 +15,9 @@
  desc_ainu_religion:0 "The Jomon people's religion of Fuchite explains that all things are endowed with Kamuy, from the fish in the sea to the man hunting for the fish. All things with Kamuy within their spirits should be respected in death, lest they face the punishment of the Kamuy themselves."
 
   ##NEW TI RELIGIONS
+ okinawa_religion:0 "Unaric"
+ desc_okinawa_religion:0 "Unaric comes from the term Unarigari, meaning 'Divine Sister,' or 'Priestess God.' This is because of the Kaminchu; the Noro are the chief priestess Kaminchu, while the Yata are the female shamans and mediums. The religion is distantly related to that of the Fuchites, while also taking in influence from the Yayoi Kodo and the Formosian Hanitu."
+
  confucian:0 "Ruism" 
  desc_confucian:0 "Confucianism, also known as Ruism or the School of Scholars, is deeply influenced by the teachings of Confucius (Kong Fuzi). It underscores the importance of moral rectitude, filial piety, and the cultivation of virtuous character as essential principles for harmonious living and cultural flourishing."
  taoism:0 "Taoism"
@@ -70,6 +73,8 @@
  convert_to_masto_pantheon_desc:0 "The Masto god and his powerful siblings have made an impression upon our country. Some even are seeking the spiritual connection of the Jhankri. We too could accept the religion of the Dardic people as our national faith."
  convert_to_ainu_religion:0 "Embrace Fuchite"
  convert_to_ainu_religion_desc:0 "The spirits of the Jomon, the Kamuy, enter our realm. Kamuy is said to embody everything, from the men to the animals to the weapon used to kill the animal. Is it true that Kamuy can embody our own realm as well?"
+ convert_to_okinawa_religion:0 "Accept Unaric"
+ convert_to_okinawa_religion_desc:0 "The women of the isles known as the Ryukyu speak of strange spirits and divine messages. The Kamichu women say they can protect the good men, the kind men, and the fair men. The idea of women protecting men is strange to many ears, yet there is a certain appeal. Shall we accept the ways of Unarigami and convert to Unaric?"
  convert_to_austronesian_religion_desc:0 "Shamans across our lands have long claimed to have heard whispers from a world beyond our own, but recently these whispers have grown into a deafening cacophony. Ghostly spirits referring to themselves as Hantu claim to offer guidance and protection in the realms beyond our own. Many call for us to abandon the spiritual practices of our ancestors and embrace the worship of these mysterious spirits."
  convert_to_tunguistic_religion:0 "Adopt Tungusic Shamanism"
  convert_to_tunguistic_religion_desc:0 "The spirit of Abka Enduri calls out to our people, drawing them into the mystical allure of Tungusic Shamanism. As our citizens increasingly heed this divine call and embrace these ancient beliefs, and our women become Shamans themselves, the question naturally arises, should we formally adopt Shamanism as the guiding spiritual tradition of our nation, cultivating a deeper connection to the mystical forces that envelop our existence?"
