--- a/localization/english/ti_startups_izn_l_english.yml
+++ b/localization/english/ti_startups_izn_l_english.yml
@@ -6,8 +6,10 @@
  japan_startup.a:0 "Yamato is inevitable."
  japan_startup.b:0 "The Jomon will return."
  japan_startup.c:0 "The winds of change are coming."
+ japan_startup.d:0 "As if we cared about the mainland."
  japan_startup_tt:0 "May the Kami smile fortune on us..."
  japan_startup_tt_2:0 "May the Kamuy smile fortune on us..."
+ japane_startup_tt_3:0 "May our Nuruu smile fortune on us..."
 
 
  mon_kingdoms_title:0 "The Mon Kingdoms"
