the rest of the non event-chain stuff for zhou loc

--- a/localization/english/missions/zhou_missions_l_english.yml
+++ b/localization/english/missions/zhou_missions_l_english.yml
@@ -73,12 +73,12 @@
 
  #Events
  me_zhou_1_title:0 "$zhou_missions_task_1$"
- me_zhou_1_desc:0 ""
- me_zhou_1.a:0 ""
+ me_zhou_1_desc:0 "It's time to stop looking down at the disaterous state of things. It is time to rise from the depression. [ROOT.GetCountry.GetRuler.GetName|E]'s mood reflected our state of affairs, and now as his depression subsides for ambition, the whole of the #E Zhou#! state will do the same."
+ me_zhou_1.a:0 "I DO matter!"
 
  me_zhou_2_title:0 "$zhou_missions_task_2$"
- me_zhou_2_desc:0 ""
- me_zhou_2.a:0 ""
+ me_zhou_2_desc:0 "The #E Zhou#! state was broken into three different cities of power by its final state. But there can only truly be ONE #E Zhou#!. Thus, let us dig the proverbial graves for the other two remnant states, and evolve into the one true #E Zhou#! state. Here our dominance will begin anew."
+ me_zhou_2.a:0 "There can only be one."
 
  me_zhou_3_title:0 "$zhou_missions_task_3$"
  me_zhou_3_desc:0 "With the acceptance of the deal, the wedding between the young #E Zhourite#! bride and the #E King of Han#! is set in stone. While the happy couple enjoy a grand celebration, the #E King of Zhou#! is arguably even happier. It was not so long ago that the #E Zhou#! had to admit the independence of #E Han#!, as well as the other two constituent #E Jin#! states. And now, a glorious rebirth starts with this matrimonious union."
@@ -88,108 +88,108 @@
  me_zhou_300_desc:0 "The urgency of affairs is paramount within the #E Zhou Dynasty#! right now. The rising #E Qin#! to the west, the trecherous #E Chu#! to the south, and the remnants of the #E Jin#! in the form of #E Wei, Zhao, and Han#! to the north. Of these, the #E Qin#! are of the most concern within the #E Zhourite#! court. A solution was proposed; we will offer to the #E Han#! something he cannot a refuse. A #E Zhourite#! bride, in exchange for a return of #E Han#! loyalty!"
  me_zhou_300.a:0 "Surely, they cannot refuse such an offer."
  
- me_zhou_301_title:0 ""
- me_zhou_301_desc:0 ""
- me_zhou_301.a:0 ""
+ me_zhou_301_title:0 "A Happy Marriage"
+ me_zhou_301_desc:0 "The marriage between the states of #E Zhou#! and #E Han#! doesn't just make ripples within our immediate area, but around the whole of the #E Chinese#! world. Suddenly, the imperial legitimacy of #E Zhou#! has increased 10-fold. While this isn't a complete revival, it certainly emboldens us and our policy makers."
+ me_zhou_301.a:0 "Reputation is key."
 
  me_zhou_4_title:0 "$zhou_missions_task_4$"
  me_zhou_4_desc:0 "Over 600 years ago, the #E King Yuxiong of Chu#! submitted to the #E King Wen of Zhou#!, cementing a loyalty that was never to be disrupted... or so thought the #E Zhourites#!. The #E Chu#!, in the 9th century BCE, attacked via a vassal unto the #E Zhou#! territory. As #E King Zhao of Zhou#! retaliated, drawing the forces of the #E Six Armies of the West#!, disaster struck. The unfamiliar climate had utterly confounded #E Zhao#!, and as he retreated across the #E Han River#!, the bridge collapsed! In the end, #E King Zhao#! was killed, along with half of the royal forces. This humiliation and defeat was to spell the end of the zenith of #E Zhourite#! power. It lead to a decline that plagues the mind of the #E Zhou#! even to this day.\n\nAnd finally, after so many hundreds of years, we have enacted the punishment and revenge of #E King Zhao#!. The regions of The #E Chu#! will remember this as the end of their treacherous dominance of the #E Yu#! region, as well as the beginning of a pepriod of #E Chu#! decline in the wake of #E Zhou#! reborn authority."
  me_zhou_4.a:0 "An old tragedy, and new victory."
 
  me_zhou_5_title:0 "$zhou_missions_task_5$"
- me_zhou_5_desc:0 ""
- me_zhou_5.a:0 ""
+ me_zhou_5_desc:0 "" # do this event last, what happens is the assination and death of the king of wei.
+ me_zhou_5.a:0 "No one will stand in our wei now!"
  
- me_zhou_500_title:0 ""
- me_zhou_500_desc:0 ""
- me_zhou_500.a:0 ""
+ me_zhou_500_title:0 "Zheng Bian for Wei I" # zheng bian = coup d'etat. part 1 is the introduction to the history
+ me_zhou_500_desc:0 "The #E Duke Hui of Wei#! was the first of the #E Jin#! states to claim themselves a King. After that, the former vassals of #E Zhou#! would become more and more independent. With our connections within the #E Wei#! state, along with a hefty sum of gold and many diplomatic favors, we will once again reign in the #E Wei#!, strip them of their self-proclaimed 'Kingdom' status, and returning to them vassalhood on the mighty #E Zhou#! state!"
+ me_zhou_500.a:0 "No one must find out."
  
- me_zhou_501_title:0 ""
- me_zhou_501_desc:0 ""
+ me_zhou_501_title:0 "Zheng Bian for Wei II" # this event is for introducing a plot to assinate the king of wei
+ me_zhou_501_desc:0 "A devious plot has been hatched by the minds of the #E Zhou#! and our friends in the #E Wei#! state. A coup d'état, or more aptly, a zheng bian. In exchange for helping our friend claim the throne of #E Wei#!, they will return to vassalhood under the mighty #E Zhou Dynasty#!. The first step of this zheng bian is to find an adequate candidate as well as an assassin to carry ou the deed. Luckily, we already have a candidate to take the throne who is interested in our cause."
  me_zhou_501.a:0 ""
  
- me_zhou_502_title:0 ""
+ me_zhou_502_title:0 "" # part 3 can still be anything pretty much. nothing happens event wise, ig just to have more narrative freedom. the candidate portrait and the assination portrait are displayed in this event as well as the other 4 '500' events.
  me_zhou_502_desc:0 ""
  me_zhou_502.a:0 ""
  
- me_zhou_503_title:0 ""
+ me_zhou_503_title:0 "" # final event, and me_zhou_5 is the actual end, but this event should describe how the plan is about to be set in motion. event me_zhou_5 results in the death of the king of wei
  me_zhou_503_desc:0 ""
  me_zhou_503.a:0 ""
 
- me_zhou_6_title:0 "$zhou_missions_task_6$"
+ me_zhou_6_title:0 "$zhou_missions_task_6$" #final event, a challenger kills zhao for the throne, and this is the win event
  me_zhou_6_desc:0 ""
  me_zhou_6.a:0 ""
  
- me_zhou_600_title:0 ""
+ me_zhou_600_title:0 "" #someone with the zhou bloodline is selected as a champion in order to battle with the king of zhao
  me_zhou_600_desc:0 ""
- me_zhou_600.a:0 ""
- me_zhou_600.b:0 ""
+ me_zhou_600.a:0 "" # normal fighting equipment
+ me_zhou_600.b:0 "" # better fighting equipment (more money needed)
  
  me_zhou_601_title:0 ""
- me_zhou_601_desc:0 ""
- me_zhou_601.a:0 ""
- me_zhou_601.b:0 ""
+ me_zhou_601_desc:0 "" # this one is about training. you can either spend 20 mil experience or 40. they also lead to diff events.
+ me_zhou_601.a:0 "" # -20 mil exp
+ me_zhou_601.b:0 "" # -40 mil exp
  
- me_zhou_602_title:0 ""
+ me_zhou_602_title:0 "" # this follows the less expensive mil exp one. it's also the fight itself. it's a random conclusion, so you could end it on a cliffhanger if you'd like. it will trigger either event 604 (loss) or 6 (win)
  me_zhou_602_desc:0 ""
  me_zhou_602.a:0 ""
  me_zhou_602.b:0 ""
  
- me_zhou_603_title:0 ""
+ me_zhou_603_title:0 "" # this follows the more expensive mil exp one. it's the fight itself and it's a guaranteed win. you could probs copy and paste 602 to this.
  me_zhou_603_desc:0 ""
  me_zhou_603.a:0 ""
  
- me_zhou_604_title:0 ""
+ me_zhou_604_title:0 "" # this event is the loss event. the challenger loses the bid for the throne, but u still claim their provinces anyways at least
  me_zhou_604_desc:0 ""
  me_zhou_604.a:0 ""
  
- me_zhou_605_title:0 ""
+ me_zhou_605_title:0 "" # this comes after the end of everything, a sort of epilogue written for the zhao state's perspective. this event triggers in zhao, not zhou, after the zhao are now ruled by someone with the zhou bloodline.
  me_zhou_605_desc:0 ""
  me_zhou_605.a:0 ""
 
  me_zhou_7_title:0 "$zhou_missions_task_7$"
- me_zhou_7_desc:0 ""
- me_zhou_7.a:0 ""
+ me_zhou_7_desc:0 "With the domination over the #E Song#! completed, we must move towards the region of #E Qing#! for our next plans to be set in motion. The #E Qing#! region was lost after the death of #E King You of Zhou#!. The #E Qi#! state rose and dominated much of this land. While it's a contested region, it shall soon return to imperial hands."
+ me_zhou_7.a:0 "They'll sing a song of our great return."
 
  me_zhou_8_title:0 "$zhou_missions_task_8$"
- me_zhou_8_desc:0 ""
- me_zhou_8.a:0 ""
+ me_zhou_8_desc:0 "The lands of the #E Chu#! must be thoroughly conquered. While they have spent the last half millenia growing their power and acting in complete independence, they have left their homelands for the taking. The end of this trecherous state will be a great achievement for our reborn #E Zhourite#! state, avenging the losses we felt so many years ago. We must not rest, however. The #E Chu#! dominated the area of #E Jing#!, and their remnants lay their still. We will not stop until the whole of the region is ours!"
+ me_zhou_8.a:0 "How'd chu like that?!"
 
  me_zhou_9_title:0 "$zhou_missions_task_9$"
- me_zhou_9_desc:0 ""
- me_zhou_9.a:0 ""
- me_zhou_9.b:0 ""
- me_zhou_9.c:0 ""
- me_zhou_9.d:0 ""
- me_zhou_9.e:0 ""
+ me_zhou_9_desc:0 "The #E Jin#! state was once a loyal subject. After it fell apart, we quickly lost control over the #E Wei#!, #E Han#!, and #E Zhao#!. We can now restore the #E Jin#! and redevelop the land. Surely, they will be safe under our control, but we must decide whether we give the land of #E Jin#! to the #E Han, Wei, or Zhao#!. Or, we hold the lands ourselves. Perhaps, if the #E Han, Wei, or Zhao#! are no longer relevant, we can reinstate the entirety of #E Jin#! as a nominally independent subject."
+ me_zhou_9.a:0 "We need not grant anyone any title."
+ me_zhou_9.b:0 "The Han will hold the title."
+ me_zhou_9.c:0 "The Wei will hold the title."
+ me_zhou_9.d:0 "The Zhao will hold the title."
+ me_zhou_9.e:0 "We will reinstate an independent Jin state."
 
  me_zhou_10_title:0 "$zhou_missions_task_10$"
- me_zhou_10_desc:0 ""
- me_zhou_10.a:0 ""
+ me_zhou_10_desc:0 "The #E Qin#! state was the best poised state to end the #E Zhou Dynasty#! and usher in their own #E Qin Dynasty#!. We have hampered these hopes significantly. We have conquered their heartlands, and without the heart, the #E Qin#! will die quickly. We must not relent, however, they survive yet still."
+ me_zhou_10.a:0 "The might of Zhou triumphs!"
 
  me_zhou_11_title:0 "$zhou_missions_task_11$"
- me_zhou_11_desc:0 ""
- me_zhou_11.a:0 ""
+ me_zhou_11_desc:0 "With the region of #E Qing#! once more under our control, we must safeguard our borders and take the region of #E You#!. The region is nestled between the uncivilized barbarian steppes and great cities of #E China#!. Control of the region will also assure our trade superiority over the #E Bay of China#!."
+ me_zhou_11.a:0 "You're next, You!"
 
  me_zhou_12_title:0 "$zhou_missions_task_12$"
- me_zhou_12_desc:0 ""
- me_zhou_12.a:0 ""
+ me_zhou_12_desc:0 "With the barbarian tribes of the #E Yiqu#! pacified, we have secured the civilized lands of #E China#! against the uncivilized threats. Furthermore, we have avenged the end of the #E Western Zhou#! era. Our people celebrate the achievement, many flocking to the banner, willing to fight to keep the peace and continue the reinstatement of the #E Zhou Dynasty#!."
+ me_zhou_12.a:0 "The people believe in me!"
 
  me_zhou_13_title:0 "$zhou_missions_task_13$"
- me_zhou_13_desc:0 ""
- me_zhou_13.a:0 ""
+ me_zhou_13_desc:0 "The end of the #E Qin#! state is upon us. They were once the greatest threat to us in our weakest state, but now, they are no more. Perhaps in another world, the #E Qin Dynasty#! would be synonymous with this era, but luckily, we live in no such reality."
+ me_zhou_13.a:0 "Who is left to stop us now?"
 
  me_zhou_14_title:0 "$zhou_missions_task_14$"
- me_zhou_14_desc:0 ""
- me_zhou_14.a:0 ""
+ me_zhou_14_desc:0 "The #E Yan#! were lead by the #E Ji#! family, claiming to be the successors to us, the #E Zhou Dynasty#!. Clearly, we need no successor. Many of the people here are already sympathetic to our cause, and they give our armies donations in their support."
+ me_zhou_14.a:0 "We have arrived at the edge of North China."
 
  me_zhou_15_title:0 "$zhou_missions_task_15$"
- me_zhou_15_desc:0 ""
- me_zhou_15.a:0 ""
+ me_zhou_15_desc:0 "The #E Zhou Bureaucracy#! is an advanced system that divides subject ranks into #E Gong, Hou, Bo, Zi, and Nan#!. This concise system prepares us better than any other state to rule over a vast array of subjects, as well as put us in an advanced technological position in general."
+ me_zhou_15.a:0 "Who said bureaucracy was boring?"
 
  me_zhou_16_title:0 "$zhou_missions_task_16$"
- me_zhou_16_desc:0 ""
- me_zhou_16.a:0 ""
+ me_zhou_16_desc:0 "Our agricultural developments and #E Hydraulic Engineering#! focus allows us to circumvent natural disasters related to the river or rain that others still struggle with."
+ me_zhou_16.a:0 "We're so great!"
 
  me_zhou_17_title:0 "$zhou_missions_task_17$"
  me_zhou_17_desc:0 ""
@@ -216,8 +216,8 @@
  me_zhou_1703.b:0 ""
 
  me_zhou_18_title:0 "$zhou_missions_task_18$"
- me_zhou_18_desc:0 ""
- me_zhou_18.a:0 ""
+ me_zhou_18_desc:0 "Our state's laws have improved and adapted with time. It is an achievement that speaks to both our political ingenuity, as well as our legacy and experience in ruling this ancient land of #E China#!. This will also help to make sure we never again collapse into #E Warring States#!, as it will surely be against the law to do so!"
+ me_zhou_18.a:0 "Let's outlaw crime next."
 
  me_zhou_19_title:0 "$zhou_missions_task_19$"
  me_zhou_19_desc:0 ""
